deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: kayak-service
  labels:
    app: kayak-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: kayak-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kayak-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kayak-service
  template:
    metadata:
      labels:
        app: kayak-service
        version: v1
    spec:
      containers:
        - name: kayak-app
          image: hiteshjoshi1/demo-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
